# Call-Me-Maybe

./: .flake8  pyproject.toml
data/input/: function_calling_tests.json  functions_definition1.json
llm_sdk/: pyproject.toml
llm_sdk/llm_sdk/: __init__.py
src/: __main__.py  file_loader.py  llm.py  models.py
